--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -680,6 +680,7 @@ input:checked + .slider:before {
   scrollbar-width: thin;
 
   &::-webkit-scrollbar {
+    display: none;
     width: 0px;
   }
 
